Added WEO data csv file

--- a/OPG_powerplant_data.ipynb
+++ b/OPG_powerplant_data.ipynb
@@ -42,7 +42,16 @@
     "                 encoding='latin-1', \n",
     "                 low_memory=False)\n",
     "df_dict = pd.read_csv(r'OPG_memberships_19-03-2020.csv')\n",
-    "df_dict = df_dict[df_dict['parent_class']=='Generator'].rename({'parent_object':'powerplant'}, axis=1)"
+    "df_dict = df_dict[df_dict['parent_class']=='Generator'].rename({'parent_object':'powerplant'}, \n",
+    "                                                               axis=1)\n",
+    "df_weo_data = pd.read_csv(r'weo_2018_powerplant_costs.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create main generator table"
    ]
   },
   {
@@ -131,16 +140,14 @@
     "df_gen_2.loc[(df_gen_2['technology']=='Gas') \n",
     "             & (df_gen_2['Max Capacity'].astype(float) > 130),'technology'] = 'Gas-CCGT' \n",
     "df_gen_2.loc[(df_gen_2['technology']=='Gas') \n",
-    "             & (df_gen_2['Max Capacity'].astype(float) <= 130),'technology'] = 'Gas-OCGT' \n",
-    "\n",
-    "df_gen_agg_node = df_gen_2[df_gen_2['start_year']<=2015]\n",
-    "df_gen_agg_node = df_gen_agg_node.groupby(['node', 'technology'], \n",
-    "                                          as_index=False)['total_capacity'].sum()\n",
-    "df_gen_agg_node = df_gen_agg_node.pivot(index='node', \n",
-    "                                        columns='technology', \n",
-    "                                        values='total_capacity').fillna(0).reset_index()\n",
-    "\n",
-    "df_gen_agg_node.drop('Sto', axis=1, inplace=True) # Drop 'Sto' technology. Only for USA."
+    "             & (df_gen_2['Max Capacity'].astype(float) <= 130),'technology'] = 'Gas-OCGT' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create table with aggregated capacity  "
    ]
   },
   {
@@ -149,6 +156,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_gen_agg_node = df_gen_2[df_gen_2['start_year']<=2015]\n",
+    "df_gen_agg_node = df_gen_agg_node.groupby(['node', 'technology'], \n",
+    "                                          as_index=False)['total_capacity'].sum()\n",
+    "df_gen_agg_node = df_gen_agg_node.pivot(index='node', \n",
+    "                                        columns='technology', \n",
+    "                                        values='total_capacity').fillna(0).reset_index()\n",
+    "\n",
+    "df_gen_agg_node.drop('Sto', axis=1, inplace=True) # Drop 'Sto' technology. Only for USA.\n",
+    "\n",
+    "# Add extra nodes which exist in 2050 but are not in the 2015 data\n",
     "nodes_extra_df = pd.DataFrame(columns=['node'])\n",
     "nodes_extra_list = ['AF-SOM',\n",
     "                    'AF-TCD',\n",
@@ -164,8 +181,14 @@
     "\n",
     "df_gen_agg_node = df_gen_agg_node.append(nodes_extra_df,\n",
     "                                         ignore_index=True).fillna(0).sort_values(by='node').set_index('node').round(2)\n",
-    "#df_gen_agg_node = df_gen_agg_node\n",
     "df_gen_agg_node.to_csv(r'test_output_2.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Append powerplant operational life, capital costs, fixed costs"
    ]
   },
   {
@@ -174,7 +197,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_gen_2"
+    "df_gen_2['region_code'] = df_gen_2['node'].str[:2]\n",
+    "df_gen_2['country_code'] = df_gen_2['node'].str[3:6]\n",
+    "df_gen_2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cap_fix_costs = pd.melt(df_weo_data,\n",
+    "                          id_vars = ['technology', 'region/country', 'parameter'],\n",
+    "                          value_vars = ['2017', '2030', '2040'],\n",
+    "                          var_name = 'year').reset_index()\n",
+    "df_cap_fix_costs['parameter'] = df_cap_fix_costs['parameter'].str.split('\\n', expand=True)[0]\n",
+    "weo_region_mapping = {'Africa':'AF', \n",
+    "                      'Brazil':'SA',\n",
+    "                      'China':'AS',\n",
+    "                      'Europe':'EU', \n",
+    "                      'India':'AS',\n",
+    "                      'Japan':'AS',\n",
+    "                      'Middle East':'AS', \n",
+    "                      'Russia':'EU',\n",
+    "                      'United States':'NA',\n",
+    "                     }\n",
+    "\n",
+    "df_cap_fix_costs = pd.pivot_table(df_cap_fix_costs, index=['technology','parameter','year'],\n",
+    "             columns='region/country',\n",
+    "             values= 'value')\n"
    ]
   },
   {
