Reorganised data and output file structure

--- a/OPG_powerplant_data.ipynb
+++ b/OPG_powerplant_data.ipynb
@@ -38,13 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'OPG_powerplant_data_19-03-2020.csv', \n",
+    "df = pd.read_csv(r'data/OPG_powerplant_data_19-03-2020.csv', \n",
     "                 encoding='latin-1', \n",
     "                 low_memory=False)\n",
-    "df_dict = pd.read_csv(r'OPG_memberships_19-03-2020.csv')\n",
+    "df_dict = pd.read_csv(r'data/OPG_memberships_19-03-2020.csv')\n",
     "df_dict = df_dict[df_dict['parent_class']=='Generator'].rename({'parent_object':'powerplant'}, \n",
     "                                                               axis=1)\n",
-    "df_weo_data = pd.read_csv(r'weo_2018_powerplant_costs.csv')"
+    "df_weo_data = pd.read_csv(r'data/weo_2018_powerplant_costs.csv')"
    ]
   },
   {
@@ -181,7 +181,7 @@
     "\n",
     "df_gen_agg_node = df_gen_agg_node.append(nodes_extra_df,\n",
     "                                         ignore_index=True).fillna(0).sort_values(by='node').set_index('node').round(2)\n",
-    "df_gen_agg_node.to_csv(r'test_output_2.csv')"
+    "df_gen_agg_node.to_csv(r'output/test_output_2.csv')"
    ]
   },
   {
@@ -225,8 +225,10 @@
     "                     }\n",
     "\n",
     "df_cap_fix_costs = pd.pivot_table(df_cap_fix_costs, index=['technology','parameter','year'],\n",
-    "             columns='region/country',\n",
-    "             values= 'value')\n"
+    "                                  columns='region/country',\n",
+    "                                  values= 'value', \n",
+    "                                  aggfunc='sum').reset_index()\n",
+    "df_cap_fix_costs.to_csv(r'output/test_cap_fix_costs.csv')"
    ]
   },
   {
